--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "turbo run build --no-daemon",
     "build:watch": "echo \"Starting build in watch mode...\" && chokidar \"packages/**/*.ts\" --ignore \"packages/**/dist/**/*.d.ts\"  -c \"yarn run build && yarn run build:type\"",
-    "build:doc": "typedoc --out ./website/docs/generated/ && node scripts/finalizeTypedocs.js",
+    "build:doc": "typedoc --options ./typedoc.json && node scripts/finalizeTypedocs.js",
     "build:type": "turbo run build:type --no-daemon",
     "dev": "turbo run dev --parallel --no-daemon",
     "fmt": "turbo run fmt --no-daemon",
@@ -29,27 +29,27 @@
   },
   "devDependencies": {
     "chokidar-cli": "^3.0.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.54.0",
     "eslint-config-discordeno": "*",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.0",
-    "prettier": "^3.0.3",
-    "turbo": "latest",
-    "typedoc": "^0.23.26",
-    "typedoc-plugin-markdown": "^3.14.0",
-    "typescript": "^4.9.5"
+    "lint-staged": "^15.1.0",
+    "prettier": "^3.1.0",
+    "turbo": "^1.10.16",
+    "typedoc": "0.25.4",
+    "typedoc-plugin-markdown": "3.17.1",
+    "typescript": "5.2.2"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,md,html,css}": "prettier --ignore-unknown --write",
+    "*.{js,jsx,ts,tsx,md,html,css}": "yarn run prettier --ignore-unknown --write",
     "*.{js,ts,tsx}": [
-      "eslint --fix --config ./packages/eslint-config-discordeno/index.js --resolve-plugins-relative-to ."
+      "yarn run eslint --fix --config ./packages/eslint-config-discordeno/index.js --resolve-plugins-relative-to ."
     ]
   },
-  "packageManager": "yarn@3.6.4",
+  "packageManager": "yarn@4.0.2",
   "dependencies": {
-    "typedoc-plugin-missing-exports": "^1.0.0"
+    "typedoc-plugin-missing-exports": "^2.1.0"
   }
 }
