--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -31,25 +31,25 @@
   "dependencies": {
     "@discordeno/types": "19.0.0-alpha.1",
     "@discordeno/utils": "19.0.0-alpha.1",
-    "ws": "^8.13.0"
+    "ws": "^8.14.2"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.40",
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.15.3",
-    "@types/sinon": "^10.0.13",
-    "@types/ws": "^8.5.4",
-    "c8": "^7.13.0",
-    "chai": "^4.3.7",
-    "eslint": "^8.36.0",
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.99",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^18.18.13",
+    "@types/sinon": "^17.0.2",
+    "@types/ws": "^8.5.10",
+    "c8": "^8.0.1",
+    "chai": "^4.3.10",
+    "eslint": "^8.54.0",
     "eslint-config-discordeno": "*",
     "mocha": "^10.2.0",
-    "sinon": "^15.0.2",
+    "sinon": "^17.0.1",
     "ts-node": "^10.9.1",
     "tsconfig": "*",
-    "typescript": "^4.9.5",
+    "typescript": "5.2.2",
     "uWebSockets.js": "https://github.com/uNetworking/uWebSockets.js.git#commit=42c9c0d5d31f46ca4115dc75672b0037ec970f28"
   }
 }
