--- a/website/package.json
+++ b/website/package.json
@@ -37,6 +37,8 @@
     "@tsconfig/docusaurus": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "esbuild": "^0.19.8",
+    "esbuild-loader": "^4.0.2",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^40.0.0",
@@ -45,6 +47,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.1.0",
+    "terser-webpack-plugin": "^5.3.9",
     "typescript": "5.3.2"
   },
   "browserslist": {
