--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -1,16 +1,16 @@
-name: Rest proxy
+name: Docker App - Rest proxy
 
 on:
   push:
     branches:
       - 'main'
     paths:
-      - '.github/workflows/rest-proxy.yml'
-      - 'proxies/rest/**'
+      - '.github/workflows/docker-app-rest-passthrough.yml'
+      - 'docker-apps/rest-passthrough/**'
   pull_request:
     paths:
-      - '.github/workflows/rest-proxy.yml'
-      - 'proxies/rest/**'
+      - '.github/workflows/docker-app-rest-passthrough.yml'
+      - 'docker-apps/rest-passthrough/**'
   schedule:
     - cron: '0 0 * * *'
 
@@ -19,7 +19,7 @@ jobs:
     name: Build docker image
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Cache Docker layers
         uses: actions/cache@v3
         with:
@@ -28,17 +28,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-single-buildx
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           push: false
-          tags: discordeno/rest-proxy:latest
-          context: proxies/rest
+          tags: discordeno/rest-passthrough:latest
+          context: docker-apps/rest-passthrough
           target: runner
-          outputs: type=docker,dest=/tmp/rest-proxy-image.tar
+          outputs: type=docker,dest=/tmp/rest-passthrough-image.tar
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       - # Temp fix
@@ -51,8 +51,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: rest-proxy-image
-          path: /tmp/rest-proxy-image.tar
+          name: rest-passthrough-image
+          path: /tmp/rest-passthrough-image.tar
 
   image-scan:
     name: Image scan
@@ -65,14 +65,14 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
-          name: rest-proxy-image
+          name: rest-passthrough-image
           path: /tmp
       - name: Load Docker image
-        run: docker load --input /tmp/rest-proxy-image.tar
+        run: docker load --input /tmp/rest-passthrough-image.tar
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'discordeno/rest-proxy:latest'
+          image-ref: 'discordeno/rest-passthrough:latest'
           format: 'table'
           exit-code: '0'
           ignore-unfixed: true
@@ -82,7 +82,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         if: ${{ github.event_name == 'schedule' || github.event_name == 'push' }}
         with:
-          image-ref: 'discordeno/rest-proxy:latest'
+          image-ref: 'discordeno/rest-passthrough:latest'
           exit-code: '0'
           vuln-type: 'os,library'
           severity: 'UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL'
@@ -101,7 +101,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          image: 'discordeno/rest-proxy:latest'
+          image: 'discordeno/rest-passthrough:latest'
           args: --file=proxies/rest/Dockerfile
       - name: Upload result to GitHub Code Scanning
         if: ${{ github.event_name == 'schedule' || github.event_name == 'push' }}
@@ -133,7 +133,7 @@ jobs:
         with:
           context: proxies/rest
           push: false
-          tags: 'discordeno/rest-proxy:latest'
+          tags: 'discordeno/rest-passthrough:latest'
           # linux/s390x stuck at yarn install, remove it for now
           platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le
           target: runner
@@ -173,7 +173,7 @@ jobs:
         with:
           context: proxies/rest
           push: true
-          tags: 'ghcr.io/discordeno/rest-proxy:latest'
+          tags: 'ghcr.io/discordeno/rest-passthrough:latest'
           # linux/s390x stuck at yarn install, remove it for now
           platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le
           target: runner
