feat: add Discordeno team to codeowners (#3199)
* feat: add DD team with DD core to codeowners

* fix: revert back to Skillz and Itoh directly for now

core team is missing write permissions

* feat: only allow Skillz and Itoh to make CODEOWNER changes

---------

Co-authored-by: ITOH <to@itoh.at>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-*                          @H01001000 @Fleny113 @MatthewSH @Skillz4Killz @itohatweb
+*                          @discordeno/team @Skillz4Killz @itohatweb
 
 /.github/CODEOWNERS        @Skillz4Killz @itohatweb
 /.github/workflows/        @H01001000
