--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -8,24 +8,25 @@ on:
   push:
     branches: ['main']
     paths:
-      - "website/**"
-      - ".github/workflows/site.yml"
-      - "jsdoc2md.json"
-      - "typedoc.json"
-      - "package.json"
-      - "packages/**"
+      - 'website/**'
+      - '.github/workflows/site.yml'
+      - 'jsdoc2md.json'
+      - 'typedoc.json'
+      - 'package.json'
+      - 'packages/**'
   pull_request:
-    branches: ["main"]
+    branches: ['main']
     paths:
-      - "website/**"
-      - ".github/workflows/site.yml"
-      - "jsdoc2md.json"
-      - "typedoc.json"
-      - "package.json"
-      - "packages/**"
+      - 'website/**'
+      - '.github/workflows/site.yml'
+      - 'jsdoc2md.json'
+      - 'typedoc.json'
+      - 'package.json'
+      - 'packages/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  merge_group:
 
 permissions:
   contents: read
@@ -88,7 +89,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name != 'pull_request'
+    if: github.event_name != 'pull_request' && github.event_name != 'merge_group'
     concurrency: deploy-site
     steps:
       - name: Deploy to GitHub Pages
