--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -15,15 +15,6 @@ on:
       - 'package.json'
       - 'packages/**'
   pull_request:
-    branches: ['main']
-    paths:
-      - 'website/**'
-      - '.github/workflows/site.yml'
-      - 'jsdoc2md.json'
-      - 'typedoc.json'
-      - 'package.json'
-      - 'packages/**'
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   merge_group:
@@ -89,7 +80,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name != 'pull_request' && github.event_name != 'merge_group'
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     concurrency: deploy-site
     steps:
       - name: Deploy to GitHub Pages
