--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -15,6 +15,7 @@ jobs:
     name: E2E Test
     runs-on: ubuntu-latest
     steps:
+      - uses: ahmadnassri/action-workflow-queue@v1
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
